--- a/src/pages/home/components/Team/team.scss
+++ b/src/pages/home/components/Team/team.scss
@@ -1,6 +1,7 @@
 .section-team {
-  padding-bottom: 100px;
+  padding: 100px 0px;
   background-color: #120d14;
+  margin-top: -70px;
   .title {
     width: 60%;
     display: flex;
